# SpookyPopEmulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/supercell/phoenix/: ClashNativeActivity.java
scripts/: build_android_apk.sh  build_android_arm64.sh
src/: android_native_entry.cpp  common.h  crypto_compat.cpp  crypto_compat.h  emulator.cpp  emulator.h  guest_memory.cpp  guest_memory.h  libc_abi.cpp  libc_abi.h  libstdcpp_abi.cpp  libstdcpp_abi.h  macho_loader.cpp  macho_loader.h  main.cpp  objc_abi.cpp  objc_abi.h
src/graphics/: host_gl_backend.h  host_gl_backend_android.cpp  host_gl_backend_macos.mm  host_gl_backend_stub.cpp
src/shims/: accounts_shim.cpp  audiotoolbox_shim.cpp  avfoundation_shim.cpp  corefoundation_shim.cpp  coregraphics_shim.cpp  coremedia_shim.cpp  coretelephony_shim.cpp  foundation_shim.cpp  gamekit_shim.cpp  libgcc_shim.cpp  libobjc_shim.cpp  libsqlite3_shim.cpp  libstdcpp_shim.cpp  libsystem_shim.cpp  mediaplayer_shim.cpp  messageui_shim.cpp  modules.h  openal_shim.cpp  opengles_shim.cpp  quartzcore_shim.cpp  security_shim.cpp  self_shim.cpp  shim_context.h  shim_registry.cpp  shim_registry.h  social_shim.cpp  storekit_shim.cpp  systemconfiguration_shim.cpp  uikit_shim.cpp
